@@ -1,3 +1,9 @@
+2006-12-27 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
+
+	* SymmetricAlgorithmTestBase.cs:
+	* CamelliaTest.cs:
+	* RijndaelTest.cs: 各種ブロック暗号モードのマルチブロックテストを追加
+
 2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
 
 	* SymmetricAlgorithmTestBase.cs:
